@@ -16,7 +16,7 @@ setdefault devices off
 #Print
 ui_print " "
 ui_print " ___________________________________"
-ui_print "       20230601 update - A52s       "
+ui_print "       20230701 update - A52s       "
 ui_print " ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯"
 #Get device info
 model=$(grep_cmdline androidboot.em.model)
@@ -41,9 +41,9 @@ if ! exist "$FILE"; then
    ui_print " "
    ui_print " Press any volume button to continue... "
    if $yes; then
-      run_program "$addons/reboot" recovery
+      reboot recovery
    else
-      run_program "$addons/reboot" recovery
+      reboot recovery
    fi
 else
    #Mount
